<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_feed"
        android:title="@string/nav_feed" />
    <item
        android:id="@+id/nav_people"
        android:icon="@drawable/ic_people"
        android:title="@string/people" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/nav_productivity"
        android:icon="@drawable/ic_productivity"
        android:title="@string/nav_productivity" />
    <item
        android:id="@+id/nav_marketplace"
        android:icon="@drawable/ic_marketplace"
        android:title="@string/nav_marketplace" />
</menu>
