<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputLayout style="@style/InputStyle" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/opp_title">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/InputStyle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:hint="@string/opp_description">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textMultiLine" android:minLines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/InputStyle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:hint="@string/opp_type">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etType" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/InputStyle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:hint="@string/apply_link">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etLink" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
